Add workaround to README